--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,14 @@
   max-width: 100%;
 }
 
+.main-content .cta .talk, .main-content .cta .portfolio {
+  padding: 10px;
+  font-size: 12px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
 header nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -58,9 +66,10 @@ header nav .nav-links .nav-link {
   letter-spacing: 5px;
 }
 
-.main-content p {
+.main-content p, .main-content h4 {
   font-size: 20px;
   color: grey;
+  padding: 5px;
 }
 
 .main-content .page-intro {
@@ -69,7 +78,7 @@ header nav .nav-links .nav-link {
 }
 
 .main-content .animation {
-  height: 90vh;
+  height: 92vh;
   width: 60%;
   z-index: -1;
   background: url(../media/toys.png) no-repeat center center;
@@ -80,21 +89,20 @@ header nav .nav-links .nav-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 10px;
-  font-weight: 600;
 }
 
 .main-content .cta .talk {
   background-color: bisque;
   border: none;
-  padding: 10px;
+  margin-right: 10px;
 }
 
 .main-content .cta .portfolio {
-  padding: 10px;
-  border: 2px solid salmon;
+  border: 2px solid bisque;
   color: black;
   background-color: transparent;
 }
