--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,5 @@
+$base-color: #00B4A3;
+
 *{
   padding: 0;
   margin: 0;
@@ -17,17 +19,20 @@ header nav{
   margin: auto;
   justify-content: space-between;
   align-items: center;
+  
 
   .nav-links{
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
+    color: $base-color;
     .nav-link{
-      padding: 10px;
+      padding: 10px 40px;
       margin-left: 10px;
-      border: 1px solid black;
+      border: 2px solid $base-color;
       &:hover{
-       
+       background: $base-color;
+       color: whitesmoke;
       }
     }
   }
@@ -39,7 +44,7 @@ header nav{
   h2{
     font-weight: lighter;
     font-size: 70px;
-    background: linear-gradient(to top right,black,pink);
+    background: linear-gradient(to top right,#2E294E,$base-color);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     letter-spacing: 5px;
@@ -61,9 +66,9 @@ header nav{
 
   .animation{
     height: 92vh;
-    width: 60%;
-    z-index: -1;
-    background: url(../media/toys.png) no-repeat center center;
+    width: 50%;
+    z-index: 1;
+    background: url(../media/clip.png) no-repeat center center;
     background-size: contain;
   }
   .cta{
@@ -71,17 +76,23 @@ header nav{
     justify-content: space-between;
     padding: 10px;
     
-
+    
+    
     .talk{
       @extend %button;
-      background-color: bisque;
+      background-color: $base-color;
+      color: whitesmoke;
       border: none;
       margin-right: 10px;
+      font-size: 14px;
+      font-weight: 700;
     }
     .portfolio{
       @extend %button;
-      border: 2px solid bisque;
-      color:black;
+      border: 2px solid $base-color;
+      color:$base-color;
+      font-size: 14px;
+      font-weight: 700;
       background-color: transparent;
       
     }
